Finish the new footer - issue#53

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <hr>
-    <div id="footer"></div>
+    <div id="footer">Please contact us at support@github.com</div>
 </body>
 </html>
